Friend list in player profile

--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -28,3 +28,9 @@ services:
         resource: '../../src/AppBundle/Controller'
         public: true
         tags: ['controller.service_arguments']
+
+    AppBundle\Twig\:
+        resource: '../../src/AppBundle/Twig/*'
+        public: true
+        tags: ['twig.extension']
+
